fix wrong width for top of table of contents

--- a/src/documents/styles/components/article-nav.less
+++ b/src/documents/styles/components/article-nav.less
@@ -69,6 +69,14 @@
     width: 300px;
     z-index: 100;
 
+    @media (min-width: 992px) {
+      width: 230px;
+    }
+
+    @media (min-width: 1200px) {
+      width: 300px;
+    }
+
     & a {
       text-overflow: ellipsis;
       display: inline;
